--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
