--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
