--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.15.1",
+    "firebase": "^12.6.0",
     "jose": "^6.1.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
